--- a/app.json
+++ b/app.json
@@ -4,16 +4,12 @@
     "repository": "https://github.com/tingirifistik/Enough",
     "env": {
         "TOKEN": {
-            "description": "5644249503:AAHfcmaQlwZch9xGhLErMrS7IUKnFRSS_3s",
+            "description": "Telegram botunun Token'ı",
             "required": true
         },
         "SAHIP": {
-            "description": "5424585839",
-            "required": true
-        },
-		 "SAHIP2": {
-            "description": "5424585839",
-            "required": true
+            "description": "Size SMS gelmemesi için telefon numaranız",
+            "required": false
         }
     },
     "formation": {
